# Thicc-Slim-Heap

./: CMakeLists.txt  README.md
heap_lib/: CMakeLists.txt  d-heap.cpp  d-heap.h  link.cpp  link.h  thick_func.cpp  thick_func.h  thick_heap.cpp  thick_heap.h  thin_func.cpp  thin_func.h  thin_heap.cpp  thin_heap.h
heap_main/: CMakeLists.txt  main.cpp
heap_test/: CMakeLists.txt  main.cpp
link_lib/: CMakeLists.txt  link.cpp  link.h
